--- a/back/package.json
+++ b/back/package.json
@@ -18,11 +18,14 @@
     "express-session": "^1.17.3",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
+    "maskdata": "^1.2.0",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^6.8.2",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nocache": "^3.0.4"
+    "nocache": "^3.0.4",
+    "password-validator": "^5.3.0",
+    "sha1": "^1.1.1"
   }
 }
